--- a/professores/css/editarProfessor.css
+++ b/professores/css/editarProfessor.css
@@ -232,6 +232,44 @@ body {
     gap: 10px;
 }
 
+/* mostrar password */
+.password-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.password-wrapper input[type="password"],
+.password-wrapper input[type="text"] {
+    flex: 1;
+}
+
+.toggle-password-inline {
+    font-size: 14px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+
+
+/* botão de eliminar */
+
+.btn-eliminar {
+    background-color: #c0392b;
+    color: #fff;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+.btn-eliminar:hover {
+    background-color: #e74c3c;
+}
+
+
 .btn-salvar {
     background-color: #1aa179;
     color: white;
